--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,8 @@
   <body>
     <module href="./src/partials/10_header.html"></module>
 
+    <module href="./src/partials/20_section-promoted.html"></module>
+
     <module href="./src/partials/30_section-features.html"></module>
 
     <module href="./src/partials/50_section-products.html"></module>
