Correct syntax Error

--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,7 @@
     <module href="./src/partials/30_section-features.html"></module>
 
     <module href="./src/partials/50_section-products.html"></module>
+    <module href="./src/partials/60_section-gallery.html"></module>
 
     <module href="./src/partials/70_section-blog-posts.html"></module>
 
