Adding first carousel

--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Furnitures shop</title>
+    <link rel="stylesheet" href="./vendor/flickity.min.css" />
     <link rel="stylesheet" href="./sass/style.scss" />
   </head>
-
   <body>
     <module href="./src/partials/10_header.html"></module>
 
