--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Furnitures shop</title>
     <link rel="stylesheet" href="./sass/style.scss" />
+    <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css" />
   </head>
 
   <body>
@@ -20,6 +21,8 @@
 
     <module href="./src/partials/90_footer.html"></module>
 
+    <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/2.3.0/mustache.js"></script>
     <script src="./scripts/bootstrap.min.js"></script>
     <script src="./scripts/app.js"></script>
   </body>
