--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Furnitures shop</title>
     <link rel="stylesheet" href="./sass/style.scss" />
+    <link rel="stylesheet" href="./vendor/flickity.min.css" />
   </head>
 
   <body>
@@ -21,5 +22,6 @@
 
     <script src="./scripts/bootstrap.min.js"></script>
     <script src="./scripts/app.js"></script>
+    <script src="./scripts/products.js"></script>
   </body>
 </html>
